--- a/views/layout_analyze.html
+++ b/views/layout_analyze.html
@@ -9,11 +9,14 @@
 <link rel="stylesheet" href="/css/bootstrap-slider.min.css">
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/main.css">
-
+<style>
+   body { background: black !important; color: white }
+</style>
 <script src="/js/lib/jquery-1.11.0.min.js"></script>
 <script src="/js/lib/bootstrap.min.js"></script>
 <script src="/js/lib/bootstrap-slider.min.js"></script>
 <script src="/js/lib/bootbox.min.js"></script>
+<script src="/js/lib/jquery.lazyload.min.js"></script>
 
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
