--- a/views/analyze.html
+++ b/views/analyze.html
@@ -1,3 +1,6 @@
+<div id="tanalsettings" class="tab-pane fade in active">
+</div>
+
 <!-- Modal -->
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -13,11 +16,11 @@
 <div class="btn-group">
     <a href="#" class="csv btn btn-warning btn-xs">csv</a>
 </div>
-<!--
+
 <div class="btn-group">
     <a href="#" class="del btn btn-danger btn-xs">DELETE</a>
 </div>
--->
+
 
 
 <div class="tree">
