--- a/views/layout_analyze.html
+++ b/views/layout_analyze.html
@@ -41,11 +41,35 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">Analyzer</a>
+			<a class="navbar-brand" href="#">AnalýzOmat</a>
+		</div>
+                <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav nav-tabs">
+                                <li class="dropdown"><a href="#tanaldata" data-toggle="dropdown" class="dropdown-toggle">Data</a></li>
+                                <li class="dropdown"><a href="#tanalsettings" data-toggle="dropdown" class="dropdown-toggle">Analyze</a></li>
+			</ul>
 		</div>
 	</div>
 </nav>
 
+<!--
+<div id="tanalyze" class="tab-pane fade">
+        <img id="image" />
+        <br />
+        <input id="ex6" type="text" style="width: 640px" data-slider-min="1" data-slider-max="{{ frameCount }}" data-slider-step="1" data-slider-value="1" />
+        <br />
+        object 1 <span id="object_1">0,1</span><br />
+        object 2 <span id="object_2">0,1</span><br />
+        object 3 <span id="object_3">0,1</span><br />
+        object 4 <span id="object_4">0,1</span><br />
+        object 5 <span id="object_5">0,1</span><br />
+        object 6 <span id="object_6">0,1</span><br />
+        <div id="output"></div>
+        <br />
+        <br />
+        <br />
+</div>
+-->
 		{{{ yield }}}
 
 		{{> foot }}
