--- a/views/layout_analyze.html
+++ b/views/layout_analyze.html
@@ -9,9 +9,6 @@
 <link rel="stylesheet" href="/css/bootstrap-slider.min.css">
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/main.css">
-<style>
-   body { background: black !important; color: white }
-</style>
 <script src="/js/lib/jquery-1.11.0.min.js"></script>
 <script src="/js/lib/bootstrap.min.js"></script>
 <script src="/js/lib/bootstrap-slider.min.js"></script>
@@ -29,7 +26,7 @@
 	<body>
 <script>
  if (!(typeof window.chrome === "object")) {
-    alert("This software has been made for Chrome, looks like you're using another browser. Feel free to continue, but keep in mind that there is pretty good chance that something won\'t work");
+    alert("This software has been made for Chrome, looks like you're using another browser. Feel free to continue, but keep in mind that there is a pretty good chance that something won\'t work");
 }
 </script>
 <nav class="navbar navbar-default" role="navigation">
