--- a/views/layout_analyze.html
+++ b/views/layout_analyze.html
@@ -42,8 +42,8 @@
 		</div>
                 <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav nav-tabs">
-                                <li class="dropdown"><a href="#tanaldata" data-toggle="dropdown" class="dropdown-toggle">Data</a></li>
-                                <li class="dropdown"><a href="#tanalsettings" data-toggle="dropdown" class="dropdown-toggle">Analyze</a></li>
+                                <li class="active"><a href="#tanaldata" data-toggle="tab" class="active">Data</a></li>
+                                <li ><a href="#tanalsettings" data-toggle="tab">Analyze</a></li>
 			</ul>
 		</div>
 	</div>
