analyza, generovani heatmap online

--- a/views/analyze.html
+++ b/views/analyze.html
@@ -110,11 +110,11 @@
 		{{#sessions}}
                         <tr>
 			    <td width=1><input data-session-id="{{id}}" type="checkbox" /></td>
-			    <td width=1><a href="/img/heatmap/{{id}}.png"><img class="lazy" title="{{analyze.avg_distance}}
+			    <td width=1><a href="/heatmap/{{id}}.png"><img class="lazy" title="{{analyze.avg_distance}}
 {{analyze.inputs}}
 {{analyze.shocks}}
 {{analyze.outside}}
-{{analyze.path}}" width="48" height="48"data-original="/img/heatmap/{{id}}.png"></a></td>
+{{analyze.path}}" width="48" height="48" data-original="/heatmap/{{id}}.png"></a></td>
 			    <td>{{#czdate}}{{date}}{{/czdate}}</td>
 			    <td>{{day}}</td>
 <td>{{subject}}</td>
