--- a/views/analyze.html
+++ b/views/analyze.html
@@ -23,8 +23,8 @@
                                                 <div class="panel-body">
 
 {{#analysis.modules}}
-<div class="checkbox col-md-6">
-  <label><input type="checkbox" value="{{class}}">{{name}}</label>
+<div class="col-md-6">
+  <li>{{name}}</li>
 </div>
 
 {{/analysis.modules}}
